--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
 	{
 		background-color: blue;
 	}
+	.container
+	{
+		text-align: center;
+		color: yellow;
+	}
+	.container p
+	{
+		color: yellow;
+		font-size: 50px;
+	}
 </style>
 <body>
-
+<div class="container">
+	<p>My first Emailer</p>
+</div>
 </body>
 </html>
