--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
 	body
 	{
 		background-color: blue;
+		text-align: center;
 	}
 	.container
 	{
 		text-align: center;
 		color: yellow;
+		border: 2px solid #fff;
+		width: 40%;
+		height: 650px;
+		margin: 5px auto;
 	}
 	.container p
 	{
 		color: yellow;
 		font-size: 50px;
+		background-color: black;
+		padding: 10px;
 	}
 </style>
 <body>
