--- a/index.html
+++ b/index.html
@@ -17,19 +17,35 @@
 		width: 40%;
 		height: 650px;
 		margin: 5px auto;
-		background-color: red;
+
 	}
-	.container p
+	.container h1
 	{
 		color: yellow;
 		font-size: 50px;
 		background-color: black;
 		padding: 10px;
+		margin: 0px;
+	}
+	.container p
+	{
+		color: black;
+		font-size: 20px;
+		background-color: orange;
+		padding-top: 20px;
+		margin: 0px;
+		padding-bottom: 40px;
 	}
 </style>
 <body>
 <div class="container">
-	<p>My first Emailer</p>
+	<h1>My first Emailer</h1>
+<p>hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla <br>
+hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
+hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh <br>hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
+hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
+hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla </p>
+
 </div>
 </body>
 </html>
