--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
 		margin: 0px;
 		padding-bottom: 40px;
 	}
+	.container button
+	{
+		background-color: black;
+		padding: 10px 14px;
+		color: #fff;
+		font-size: 14px;
+		border-radius: 30px;
+		border-style: none;
+		margin-top: 20px;
+	}
+	.container img
+	{
+     width: 100%;
+     height: 134px;
+	}
 </style>
 <body>
 <div class="container">
@@ -44,8 +59,11 @@
 hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
 hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh <br>hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
 hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
-hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla </p>
+hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla <br>
+<button>Find More</button>
 
+</p>
+<img src="bb.jpg">
 </div>
 </body>
 </html>
