--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
 <head>
 	<title>Test_Emailer</title>
+		
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style type="text/css">
 	body
 	{
-		background-color: blue;
+		
 		text-align: center;
 	}
 	.container
 	{
 		text-align: center;
 		color: yellow;
-		border: 2px solid #fff;
+		border: 2px solid #000;
 		width: 40%;
 		height: 650px;
 		margin: 5px auto;
@@ -51,6 +54,12 @@
      width: 100%;
      height: 134px;
 	}
+	.container i
+	{
+		background-color: black;
+		padding: 20px;
+		color: orange;
+	}
 </style>
 <body>
 <div class="container">
@@ -63,7 +72,13 @@ hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hd
 <button>Find More</button>
 
 </p>
-<img src="bb.jpg">
+
+		
+		<i class='fas'>&#xf3cd; &nbsp; +91-8542365471</i>
+        <i class='fas'>&#xf0e0; &nbsp; info@nidhi.in</i>
+		<i class="fa"><strong>&#xf232; &nbsp; +91-5245879646</strong></i>
+		
+
 </div>
 </body>
 </html>
