--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<title>Test_Emailer</title>
 		
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <style type="text/css">
 	body
@@ -18,22 +17,24 @@
 		color: yellow;
 		border: 2px solid #000;
 		width: 40%;
-		height: 650px;
+		height: auto;
 		margin: 5px auto;
 
 	}
 	.container h1
-	{
-		color: yellow;
-		font-size: 50px;
-		background-color: black;
-		padding: 10px;
+		{
+		width: 100%;
+		
 		margin: 0px;
+	}
+	.container h1 img
+	{
+       width: 400px;
 	}
 	.container p
 	{
 		color: black;
-		font-size: 20px;
+		font-size: 32px;
 		background-color: orange;
 		padding-top: 20px;
 		margin: 0px;
@@ -54,31 +55,40 @@
      width: 100%;
      height: 134px;
 	}
-	.container i
+	.container img
 	{
-		background-color: black;
+		width: 50px;
+		height: auto;
 		padding: 20px;
-		color: orange;
+	}
+	.container h2
+	{
+		background-color: red;
+	}
+	.card
+	{
+		background-color: #3E8E2E;
+	}
+	.card img
+	{
+       width: 500px;
 	}
 </style>
 <body>
 <div class="container">
-	<h1>My first Emailer</h1>
-<p>hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla <br>
-hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
-hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh <br>hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
-hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla 
-hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla hduytkhg jhkvyeuiopjh jhkh iof iuiopvuio od h fhuih id hfwrui vhuh hjh huhsla <br>
+	<h1><img src="logo.png"></h1>
+	<div class="card"><img src="card.png"></div>
+<p>Get Your Visiting Card in Few Minutes<br><span style="font-size: 24px;">Try 60 Days Free Trial</span><br><br>
 <button>Find More</button>
-
 </p>
+<br>
+<h2>
+<i class="fb"><img src="fb.png"></i>
+		<i class="ig"><img src="ig.png"></i>
+        <i class="ld"><img src="ld.png"></i>
+</h2>
 
 		
-		<i class='fas'>&#xf3cd; &nbsp; +91-8542365471</i>
-        <i class='fas'>&#xf0e0; &nbsp; info@nidhi.in</i>
-		<i class="fa"><strong>&#xf232; &nbsp; +91-5245879646</strong></i>
-		
-
 </div>
 </body>
 </html>
