--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 		
 
 </head>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+</style>
 <style type="text/css">
 	body
 	{
-		
+		font-family: 'Raleway', sans-serif;
 		text-align: center;
+
 	}
 	.container
 	{
@@ -33,22 +37,22 @@
 	}
 	.container p
 	{
-		color: black;
+		color: #166A05;
 		font-size: 32px;
-		background-color: orange;
 		padding-top: 20px;
 		margin: 0px;
 		padding-bottom: 40px;
 	}
 	.container button
 	{
-		background-color: black;
+		background-color: #166A05;
 		padding: 10px 14px;
 		color: #fff;
 		font-size: 14px;
 		border-radius: 30px;
 		border-style: none;
 		margin-top: 20px;
+		cursor: pointer;
 	}
 	.container img
 	{
@@ -57,13 +61,14 @@
 	}
 	.container img
 	{
-		width: 50px;
+		width: 25px;
 		height: auto;
-		padding: 20px;
+		padding: 8px;
 	}
 	.container h2
 	{
-		background-color: red;
+		background-color: #007415;
+		margin: 0;
 	}
 	.card
 	{
@@ -73,14 +78,28 @@
 	{
        width: 500px;
 	}
+	.foot p
+	{
+		font-size: 14px;
+		margin: 0;
+		background-color: #006112;
+		color: #fff;
+	}
+	.foot p a
+	{
+		text-decoration: none;
+		color: #fff;
+	}
 </style>
 <body>
 <div class="container">
 	<h1><img src="logo.png"></h1>
 	<div class="card"><img src="card.png"></div>
-<p>Get Your Visiting Card in Few Minutes<br><span style="font-size: 24px;">Try 60 Days Free Trial</span><br><br>
-<button>Find More</button>
-</p>
+<p>Get Your Visiting Card in Few Minutes<br>
+	<span style="font-size: 20px;">Send the awesome visiting cards to your clients with all services and contacts.</span><br><br>
+	<span style="font-size: 24px;">Try 60 Days Free Trial</span><br>
+<a href="mailto:dhan9n@gmail.com"><button>Get your E-Visiting Card</button></a>
+
 <br>
 <h2>
 <i class="fb"><img src="fb.png"></i>
@@ -88,7 +107,7 @@
         <i class="ld"><img src="ld.png"></i>
 </h2>
 
-		
-</div>
+	<div class="foot"><p>Call Us: <a href="tel: +918287833426">+91-8287833426</a>, 7518839938<br><br>E-Mail: dhan9n@gmail.com<br><br><br>copyright 2021, Creative India House</p></div>	
+</div></p>
 </body>
 </html>
