--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	.container
 	{
 		text-align: center;
-		color: yellow;
+		
 		border: 2px solid #000;
 		width: 40%;
 		height: auto;
@@ -90,6 +90,22 @@
 		text-decoration: none;
 		color: #fff;
 	}
+	.container table
+	{
+		text-align: center;
+	}
+	.container table tr td img
+	{
+		width: 100px;
+		height: auto;
+	}
+	.container table tr td button
+	{
+		border: 2px solid green;
+		background-color: inherit;
+		color: green;
+		padding: 6px 14px;
+	}
 </style>
 <body>
 <div class="container">
@@ -97,9 +113,23 @@
 	<div class="card"><img src="card.png"></div>
 <p>Get Your Visiting Card in Few Minutes<br>
 	<span style="font-size: 20px;">Send the awesome visiting cards to your clients with all services and contacts.</span><br><br>
+	<table>
+		<tr>
+			<td><img src="vc.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+			<td><img src="vc1.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+		</tr>
+	</table>
+	<br><br><br>
+	<table>
+		<tr>
+			<td><img src="vc1.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+			<td><img src="vc.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+		</tr>
+	</table><br><br>
 	<span style="font-size: 24px;">Try 60 Days Free Trial</span><br>
 <a href="mailto:dhan9n@gmail.com"><button>Get your E-Visiting Card</button></a>
-
+<br>
+<br>
 <br>
 <h2>
 <i class="fb"><img src="fb.png"></i>
