--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 	<span style="font-size: 20px;">Send the awesome visiting cards to your clients with all services and contacts.</span><br><br>
 	<table>
 		<tr>
-			<td><img src="vc.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
-			<td><img src="vc1.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+			<td><img src="vc.JPG"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+			<td><img src="vc1.JPG"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
 		</tr>
 	</table>
 	<br><br><br>
