--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 	<br><br><br>
 	<table>
 		<tr>
-			<td><img src="vc1.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
-			<td><img src="vc.jpg"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+			<td><img src="vc1.JPG"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
+			<td><img src="vc.JPG"><br>guahkf id huhuvh id turyvuio uio uoyruhuioh.<br><button>Get More</button></td>
 		</tr>
 	</table><br><br>
 	<span style="font-size: 24px;">Try 60 Days Free Trial</span><br>
